update placebo method to calculate R2 of synthetic fit, add 672 yearly limit to excess shelter cost (only code no new outputs)

--- a/notebooks/snap_gap_estimation.ipynb
+++ b/notebooks/snap_gap_estimation.ipynb
@@ -1309,8 +1309,9 @@
     "    excess_shelter_cost = housing_costs - 0.5 * adj_income\n",
     "    # If so, subtract excess shelter cost up to a yearly limit\n",
     "    if excess_shelter_cost > 0:\n",
-    "        # TODO: add yearly limit excess shelter cost deduction\n",
-    "        adj_income -= excess_shelter_cost\n",
+    "        yearly_limit  = 672\n",
+    "        # TODO: change 672 to change each year\n",
+    "        adj_income -= min(excess_shelter_cost, yearly_limit)\n",
     "    \n",
     "    return adj_income\n",
     "\n",
