most updated before rerunning everything

--- a/notebooks/get_scm_covariates.ipynb
+++ b/notebooks/get_scm_covariates.ipynb
@@ -2500,7 +2500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2679,7 +2679,7 @@
        "[833 rows x 7 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2692,7 +2692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2708,7 +2708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2742,42 +2742,42 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>02</td>\n",
-       "      <td>2005</td>\n",
-       "      <td>0.014636</td>\n",
-       "      <td>0.15</td>\n",
+       "      <td>01</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.21</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>04</td>\n",
-       "      <td>2005</td>\n",
-       "      <td>0.009429</td>\n",
-       "      <td>0.20</td>\n",
+       "      <td>01</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.23</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>05</td>\n",
-       "      <td>2005</td>\n",
-       "      <td>0.007387</td>\n",
-       "      <td>0.25</td>\n",
+       "      <td>01</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.24</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>06</td>\n",
-       "      <td>2005</td>\n",
-       "      <td>0.006948</td>\n",
-       "      <td>0.19</td>\n",
+       "      <td>01</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.24</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>08</td>\n",
-       "      <td>2005</td>\n",
-       "      <td>0.001209</td>\n",
-       "      <td>0.14</td>\n",
+       "      <td>01</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.23</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2789,96 +2789,96 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>828</th>\n",
-       "      <td>51</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>0.003399</td>\n",
-       "      <td>0.13</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>829</th>\n",
-       "      <td>53</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>0.008552</td>\n",
+       "      <th>1195</th>\n",
+       "      <td>56</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>0.004058</td>\n",
        "      <td>0.12</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>830</th>\n",
-       "      <td>54</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>0.001499</td>\n",
-       "      <td>0.21</td>\n",
+       "      <th>1196</th>\n",
+       "      <td>56</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>0.003283</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>-0.434</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>831</th>\n",
-       "      <td>55</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>0.002269</td>\n",
-       "      <td>0.13</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>832</th>\n",
+       "      <th>1197</th>\n",
        "      <td>56</td>\n",
        "      <td>2021</td>\n",
        "      <td>0.003346</td>\n",
        "      <td>0.13</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1198</th>\n",
+       "      <td>56</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1199</th>\n",
+       "      <td>56</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>833 rows × 5 columns</p>\n",
+       "<p>1200 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    STATEFIPS  YEAR TANF apps / Ind in poverty  Child Poverty Rate  \\\n",
-       "0          02  2005                   0.014636                0.15   \n",
-       "1          04  2005                   0.009429                0.20   \n",
-       "2          05  2005                   0.007387                0.25   \n",
-       "3          06  2005                   0.006948                0.19   \n",
-       "4          08  2005                   0.001209                0.14   \n",
-       "..        ...   ...                        ...                 ...   \n",
-       "828        51  2021                   0.003399                0.13   \n",
-       "829        53  2021                   0.008552                0.12   \n",
-       "830        54  2021                   0.001499                0.21   \n",
-       "831        55  2021                   0.002269                0.13   \n",
-       "832        56  2021                   0.003346                0.13   \n",
+       "     STATEFIPS  YEAR TANF apps / Ind in poverty  Child Poverty Rate  \\\n",
+       "0           01  2000                        NaN                0.21   \n",
+       "1           01  2001                        NaN                0.23   \n",
+       "2           01  2002                        NaN                0.24   \n",
+       "3           01  2003                        NaN                0.24   \n",
+       "4           01  2004                        NaN                0.23   \n",
+       "...        ...   ...                        ...                 ...   \n",
+       "1195        56  2019                   0.004058                0.12   \n",
+       "1196        56  2020                   0.003283                 NaN   \n",
+       "1197        56  2021                   0.003346                0.13   \n",
+       "1198        56  2022                        NaN                0.14   \n",
+       "1199        56  2023                        NaN                0.15   \n",
        "\n",
-       "     biden_2020_margin  \n",
-       "0                  NaN  \n",
-       "1                  NaN  \n",
-       "2                  NaN  \n",
-       "3                  NaN  \n",
-       "4                  NaN  \n",
-       "..                 ...  \n",
-       "828                NaN  \n",
-       "829                NaN  \n",
-       "830                NaN  \n",
-       "831                NaN  \n",
-       "832                NaN  \n",
+       "      biden_2020_margin  \n",
+       "0                   NaN  \n",
+       "1                   NaN  \n",
+       "2                   NaN  \n",
+       "3                   NaN  \n",
+       "4                   NaN  \n",
+       "...                 ...  \n",
+       "1195                NaN  \n",
+       "1196             -0.434  \n",
+       "1197                NaN  \n",
+       "1198                NaN  \n",
+       "1199                NaN  \n",
        "\n",
-       "[833 rows x 5 columns]"
+       "[1200 rows x 5 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "covariates = pd.merge(tanf_and_poverty_df, child_poverty, on = [\"YEAR\", \"STATEFIPS\"], how = \"left\")\n",
+    "covariates = pd.merge(tanf_and_poverty_df, child_poverty, on = [\"YEAR\", \"STATEFIPS\"], how = \"outer\")\n",
     "covariates[[\"STATEFIPS\", \"YEAR\", \"Child Poverty Rate\", \"TANF apps / Ind in poverty\"]]\n",
-    "covariates = pd.merge(covariates, biden_margins, on = [\"STATEFIPS\", \"YEAR\"], how = 'left')\n",
+    "covariates = pd.merge(covariates, biden_margins, on = [\"STATEFIPS\", \"YEAR\"], how = 'outer')\n",
     "covariates = covariates[['STATEFIPS', \"YEAR\", \"TANF apps / Ind in poverty\", \"Child Poverty Rate\", \"biden_2020_margin\"]]\n",
     "covariates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
