final plots created

--- a/notebooks/snap_gap_estimation.ipynb
+++ b/notebooks/snap_gap_estimation.ipynb
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1113,29 +1113,12 @@
     "        year (int): The year this SNAP Unit was surveyed\n",
     "        housing_costs (float): The SNAP Unit's annual housing costs\n",
     "        sploc (int): > 0 if this is a couple, otherwise 0\n",
-    "        # TODO: filing_status (str): {'single', 'head', 'married'}\n",
     "        # think we only need whether they are a single head of household\n",
     "        # or not, separate vs joing filing for couples is the same for standard\n",
     "    \"\"\"\n",
     "    adj_income = gross_income - 0.2 * earned_income\n",
-    "    # If this is a couple, subtract married sd (same as 2x married separate)\n",
-    "    #if sploc > 0:\n",
-    "    #    standard_deduction = sd_table.loc[year, \"Married Couple\"]\n",
-    "    ## Otherwise, subtract head of household sd\n",
-    "    #else:\n",
-    "    #    standard_deduction = sd_table.loc[year, \"Head of Household\"]\n",
-    "    #adj_income -= standard_deduction\n",
-    "    # Subtract standard deduction\n",
-    "    #adj_income -= 204 * 12\n",
-    "\n",
-    "    # Check if housing costs exceed 50% of adjusted income\n",
-    "    #excess_shelter_cost = housing_costs - 0.5 * adj_income\n",
-    "    # If so, subtract excess shelter cost up to a yearly limit\n",
-    "    #if excess_shelter_cost > 0:\n",
-    "    #    yearly_limit = 712 * 12\n",
-    "    #    # TODO: change 672 to change each year\n",
-    "    #    adj_income -= min(excess_shelter_cost, yearly_limit)\n",
-    "    \n",
+    "    # This code does not include adjustments based on housing costs or standard deductions\n",
+    "    # Our snap gap estimates are currenrtly high, adding those adjustments will make them higher\n",
     "    return adj_income\n",
     "\n",
     "def add_snap_eligibility(acs_data: pd.DataFrame) -> pd.DataFrame:\n",
